--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 										<li><a href="#">Coloms 4</a></li>
 									</ul>
 								</li>
+								<li><a href="no-sidebar.html">Biodata</a></li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
 
