--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -42,10 +42,10 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
+								<li><a href="no-sidebar.html">Biodata</a></li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
-							</ul>
+								</ul>
 						</nav>
 
 				</div>
