change some file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="id">
 	<head>
 		<title>My first Website</title>
 		<meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8"/>
@@ -51,8 +51,8 @@
 										<li><a href="#">Coloms 4</a></li>
 									</ul>
 								</li>
-								<li><a href="no-sidebar.html">Biodata</a></li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="biodata.html">Biodata</a></li>
+								<li><a href="cita-cita.html">Cita-cita</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							</ul>
 						</nav>
