--- a/biodata.html
+++ b/biodata.html
@@ -44,7 +44,7 @@
 								</li>
 								<li><a href="biodata.html">Biodata</a></li>
 								<li><a href="cita-cita.html">Cita-cita</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="uraian.html">Uraian</a></li>
 								</ul>
 						</nav>
 
@@ -212,7 +212,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="#">TKJ 4</a></li>
 										</ul>
 									</div>
 
