--- a/cita-cita.html
+++ b/cita-cita.html
@@ -44,7 +44,7 @@
 								</li>
 								<li><a href="biodata.html">Biodata</a></li>
 								<li><a href="cita-cita.html">Cita-cita</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="uraian.html">Uraian</a></li>
 								</ul>
 						</nav>
 
@@ -69,7 +69,7 @@
 								<header>
 									<h3>Cita cita</h3>
 								</header>
-								<p>Tentunya setiap orang pasti memiliki cita cita yang kadang berubah-ubah sesuai umur dan kemampuan yang dimiliki, termasuk saya. Cita cita saya sekarang tentunya sangat mau digapai oleh sebagian orang yaitu sebagi seorang Abdi negara di bidang keamanan siber, dan itu sebagai pintu gerbang saya untuk menjadi seorang menteri Kominfo</p>
+								<p>Cita cita saya ingin menjadi seorang Abdi negara di bidang keamanan siber, dan itu sebagai pintu gerbang saya untuk menjadi seorang menteri Kominfo</p>
 							</section>
 							</article>
 						<hr />
@@ -208,7 +208,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="#">TKJ 4</a></li>
 										</ul>
 									</div>
 
