--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</li>
 								<li><a href="biodata.html">Biodata</a></li>
 								<li><a href="cita-cita.html">Cita-cita</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="uraian.html">Uraian</li>
 							</ul>
 						</nav>
 
@@ -359,7 +359,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://kjd.my.id">Me</a></li>
+											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="#">TKJ 4</a></li>
 										</ul>
 									</div>
 
