--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">Coloms 1</a></li>
-										<li><a href="#">Coloms 2</a></li>
-										<li><a href="#">Coloms 3</a></li>
+										<li><a href="#">kolom 1</a></li>
+										<li><a href="#">Kolom 2</a></li>
+										<li><a href="#">Kolom 3</a></li>
 										<li>
 											<a href="#">And a submenu &hellip;</a>
 											<ul>
-												<li><a href="#">Mini coloms 1</a></li>
-												<li><a href="#">Mini coloms 2</a></li>
-												<li><a href="#">Mini coloms 3</a></li>
-												<li><a href="#">Mini coloms 4</a></li>
+												<li><a href="#">Subkolom 1</a></li>
+												<li><a href="#">SubKolom 2</a></li>
+												<li><a href="#">SubKolom 3</a></li>
+												<li><a href="#">SubKolom 4</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Coloms 4</a></li>
+										<li><a href="#">Kolom 4</a></li>
 									</ul>
 								</li>
 								<li><a href="biodata.html">Biodata</a></li>
